--- a/UITAP/Dockerfile
+++ b/UITAP/Dockerfile
@@ -7,7 +7,7 @@ COPY . /python-test-calculator
 WORKDIR /
 
 
-RUN pip install --no-cache-dir -r ./requirements.txt
+RUN pip install --no-cache-dir -r ./UITAP/requirements.txt
 
 RUN ["pytest", "-v", "--junitxml=reports/result.xml"]
 
