--- a/UITAP/Dockerfile
+++ b/UITAP/Dockerfile
@@ -6,8 +6,9 @@ COPY . /python-test-calculator
 
 WORKDIR /
 
+RUN pip freeze > requirements.txt
 
-RUN pip install --no-cache-dir -r ./UITAP/requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 RUN ["pytest", "-v", "--junitxml=reports/result.xml"]
 
