--- a/UITAP/Dockerfile
+++ b/UITAP/Dockerfile
@@ -10,8 +10,8 @@ RUN pip freeze > requirements.txt
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-WORKDIR /UITAP
+WORKDIR /
 
-RUN ["pytest", "-v", "--junitxml=reports/result.xml"]
+RUN ["python -m pytest", "-v", "--junitxml=reports/result.xml"]
 
 CMD tail -f /dev/null
